fix: center align navbar brand text for improved layout

--- a/css/style.css
+++ b/css/style.css
@@ -168,6 +168,7 @@ a:focus {
   .navbar-brand,
   .navbar-brand:hover {
     font-size: 18px;
+    text-align: center;
   }
 }
 
